# cpu-raytracer

./: CMakeLists.txt  README.md
src/: main.cpp
src/display/: screen.cpp  screen.h
src/renderer/: camera.cpp  camera.h  ray.h  renderer.cpp  renderer.h  world.cpp  world.h
src/renderer/material/: constant.h  generic.h  glass.h  material.h
src/renderer/object/: object.cpp  object.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  volumetric.cpp  volumetric.h
src/renderer/utils/: timer.h  utils.h
